src/test/deca/context/invalid/created/rule3.28/incomp.deca
// Résultat erreur:
//    15:14
//    affectation impossible (règle 3.28)
//
// Description:
//    tests de programme incorrect contextuellement ( affectation impossible )
//
// Auteur:
//    Carmel
//
// Historique:
//    cree le 15/01/2024

{
    float f = true;   
}